objects/maps__ShapeLayerGeometry__c.object
<CustomObject>
    <fields>
        <fullName>maps__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Geometry10__c</fullName>
        <label>Geometry 10</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Geometry2__c</fullName>
        <label>Geometry 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Geometry3__c</fullName>
        <label>Geometry 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__GeometrySize__c</fullName>
        <label>Geometry Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <label>Maps Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Shape Layers Geometries</relationshipLabel>
        <relationshipName>ShapeLayerGeometries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Maps Shape Layer Geometry</label>
    <listViews>
        <fullName>maps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geometry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Shape Layer Geometries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>